# rocketchat

./: CHANGELOG.md  Makefile  README.md  cabal.project  rocketchat-api.cabal  rocketchat.cabal  stack.yaml
examples/: HelloBot.hs  config.ini  hellobot.hs
rocketchat/: rocketchat.cabal
rocketchat-mtl/: rocketchat-mtl.cabal
rocketchat-mtl/examples/: HelloBot.hs  config.ini
rocketchat-mtl/src/Network/RocketChat/: Monad.hs
rocketchat-mtl/src/Network/RocketChat/Monad/: Config.hs  Logging.hs  UUID.hs  WebSocket.hs
rocketchat-polysemy/: LICENSE  rocketchat-polysemy.cabal
rocketchat-polysemy/examples/: HelloBot.hs
rocketchat-polysemy/src/Network/RocketChat/: Polysemy.hs
rocketchat-polysemy/src/Network/RocketChat/Polysemy/: Config.hs  Internal.hs  Logging.hs  UUID.hs  WebSocket.hs
rocketchat/examples/: HelloBot.hs
rocketchat/src/Network/: RocketChat.hs
rocketchat/src/Network/RocketChat/: Logging.hs  Types.hs  WebSocket.hs
src/Network/: RocketChat.hs
src/Network/RocketChat/: Config.hs  Effects.hs  Internal.hs  Logging.hs  Types.hs  WebSocket.hs
src/Network/RocketChat/Effects/: Config.hs  Logging.hs  RocketChat.hs  UUID.hs  WebSocket.hs
