name:                rocketchat-polysemy
version:             0.1.0.0
synopsis:            A Rocket.Chat client api library
description:         A Rocket.Chat client api library
license:             MIT
license-file:        LICENSE
author:              Daniel Reimer
maintainer:          daniel.k.reimer97@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Network.RocketChat.Polysemy
                      Network.RocketChat.Polysemy.Config
                      Network.RocketChat.Polysemy.Internal
                      Network.RocketChat.Polysemy.Logging
                      Network.RocketChat.Polysemy.UUID
                      Network.RocketChat.Polysemy.WebSocket
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
                    , DataKinds
                    , FlexibleContexts
                    , GADTs
                    , LambdaCase
                    , PolyKinds
                    , RankNTypes
                    , ScopedTypeVariables
                    , TypeApplications
                    , TypeOperators
                    , TypeFamilies
                    , TemplateHaskell
  build-depends:      base >=4.14 && <4.15
                    , text
                    , network
                    , uuid
                    , websockets
                    , relude
                    , polysemy
                    , polysemy-plugin
                    , rocketchat
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror -fplugin=Polysemy.Plugin -O2 -flate-specialise -fspecialise-aggressively -Wunused-packages

executable example-hellobot
  main-is:            HelloBot.hs
  hs-source-dirs:     examples
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror -Wunused-packages -fplugin=Polysemy.Plugin -O2 -flate-specialise -fspecialise-aggressively
  default-extensions: OverloadedStrings
                    , DataKinds
                    , FlexibleContexts
                    , GADTs
                    , PolyKinds
                    , RankNTypes
                    , ScopedTypeVariables
                    , TypeApplications
                    , TypeOperators
                    , TypeFamilies

  build-depends:      base >=4.14 && <4.15
                    , rocketchat -any
                    , rocketchat-polysemy -any
                    , polysemy
                    , polysemy-plugin