name:                rocketchat
version:             0.1.0.0
synopsis:            A Rocket.Chat client api library
description:         A Rocket.Chat client api library
license:             MIT
license-file:        LICENSE
author:              Daniel Reimer
maintainer:          daniel.k.reimer97@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Network.RocketChat
                      Network.RocketChat.Config
                      Network.RocketChat.Logging
                      Network.RocketChat.Types
                      Network.RocketChat.WebSocket
  default-extensions: NoImplicitPrelude
                    , OverloadedStrings
  build-depends:      base >=4.14 && <4.15
                    , aeson
                    , text
                    , time
                    , unordered-containers
                    , base16-bytestring
                    , config-ini
                    , connection
                    , network
                    , cryptohash-sha256
                    , uuid
                    , websockets
                    , MissingH
                    , relude
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror -Wunused-packages

executable example-hellobot
  main-is:            HelloBot.hs
  hs-source-dirs:     examples
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror -Wunused-packages
  default-extensions: OverloadedStrings
  build-depends:      base >=4.14 && <4.15
                    , rocketchat -any